@@ -19,6 +19,7 @@
 - Drag & drop support for Files page
 - Relative paths are preserved when adding directories to the file list
 - Option to list only top-level directory or all files individually in file list
+- Option to strip binary files in build
 
 0.7.12
 - Fixes:
