@@ -1,5 +1,7 @@
 debreate (0.7.13) xenial; urgency=low
 
+  * Fixes:
+    - Don't strip parent directories from filenames
   * Full license templates can be generated
   * License templates shipped with app:
     - BSD-2-Clause
@@ -12,8 +14,15 @@ debreate (0.7.13) xenial; urgency=low
     - OFL-1.1
     - Zlib-PNG
   * Custom license templates can be placed in $HOME/.local directory
+  * Files & folders can be dropped from file manager to file list
+  * Files can be dropped onto some text areas
+  * Files & directories can be renamed from directory tree on Files page
+  * Drag & drop support for Files page
+  * Relative paths are preserved when adding directories to the file list
+  * Option to list only top-level directory or all files individually in file list
+  * Option to strip binary files in build
 
- -- Jordan Irwin <antumdeluge@gmail.com>  Mon, 12 Dec 2016 02:13:32 -0800
+ -- Jordan Irwin <antumdeluge@gmail.com>  Thu, 29 Dec 2016 08:55:53 -0800
 
 
 debreate (0.7.12) xenial; urgency=high
